--- a/src/styles/basic.css
+++ b/src/styles/basic.css
@@ -13,6 +13,7 @@ body {
 
 nav {
   width: 100vw;
+  min-width: 300px;
   height: 64px;
   background-image: linear-gradient(272deg, #AE276F, #5F1478);
   position: fixed;
@@ -38,6 +39,8 @@ button:hover {
 .modal {
   position: fixed;
   width: 100%;
+  max-width: 100vw;
+  min-width: 300px;
   height: 100%;
   background: rgba(246, 244, 246, 0.3);
   z-index: 2;
@@ -47,6 +50,8 @@ button:hover {
 .create-modal {
   height: 767px;
   width: 642px;
+  max-width: 100vw;
+  min-width: 300px;
   margin-left: auto;
   background: white;
   padding-left: 35px;
@@ -56,6 +61,7 @@ button:hover {
 .create-modal button {
   margin-top: 26px;
   width: 167px;
+  max-width: 40%;
   height: 48px;
   border: none;
   border-radius: 8px;
@@ -65,6 +71,8 @@ button:hover {
 }
 .create-modal input {
   width: 573px;
+  max-width: 85vw;
+  min-width: 280px;
   height: 60px;
   border: 1px solid #B9B9B9;
   border-radius: 8px;
@@ -81,6 +89,8 @@ button:hover {
   display: flex;
   justify-content: space-between;
   width: 572px;
+  max-width: 85vw;
+  min-width: 280px;
 }
 .create-modal .create-buttons .create-button {
   background-color: #E76316;
@@ -100,6 +110,8 @@ button:hover {
 }
 .create-modal .decorative-line-h {
   width: 572px;
+  max-width: 85vw;
+  min-width: 280px;
   height: 1px;
   background-color: #D4D4D4;
 }
@@ -119,6 +131,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   max-width: 90%;
+  min-width: 300px;
   width: 1046px;
   justify-content: center;
   margin-left: auto;
@@ -157,6 +170,7 @@ button:hover {
   background-size: cover;
   background-position: center;
   height: 261px;
+  min-width: 300px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -170,12 +184,19 @@ button:hover {
 }
 .search-background .search-bar-div input {
   width: 1046px;
+  max-width: 100%;
+  min-width: 280px;
   height: 75px;
   border-radius: 8px;
   border: none;
   padding-left: 28px;
   font-weight: 300;
   font-size: 24px;
+}
+@media (max-width: 400px) {
+  .search-background .search-bar-div input {
+    font-size: 16px;
+  }
 }
 .search-background .search-bar-div button {
   position: absolute;
@@ -195,12 +216,15 @@ button:hover {
   flex-direction: column;
   align-items: center;
   width: 438px;
+  max-width: 100vw;
+  min-width: 300px;
   height: 434px;
   margin: auto;
   background-color: white;
 }
 .delete-card button {
   width: 165px;
+  max-width: 40%;
   height: 48px;
   border-radius: 8px;
   border: none;
@@ -224,6 +248,7 @@ button:hover {
   display: flex;
   justify-content: space-around;
   width: 364px;
+  max-width: 100%;
   margin-top: 22px;
 }
 .delete-card .delete-buttons .cancel-button {
@@ -233,6 +258,7 @@ button:hover {
 }
 .delete-card .decorative-line-h {
   width: 364px;
+  max-width: 80%;
   background: #E4E4E4;
   height: 1px;
 }
